regestetion section complete

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Macro From</title>
     <!-- css add  -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
     <!-- Daisy and talwind cdn  -->
     <link
       href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css"
@@ -53,46 +53,153 @@
             <li><img src="images/flag.svg" alt="" /></li>
           </ul>
         </div>
-        <div class="navbar-end ">
+        <div class="navbar-end">
           <a class="btn bg-[#797DFC] rounded-3xl">Sign In</a>
         </div>
       </div>
       <!-- banner section  -->
-      <div class=" bg-base-200 bg h-[550px] bg-[#12132D]  ">
-        <div class="flex flex-col lg:flex-row justify-around  ">
-          <div class=" lg:text-left text-white my-auto">
-            <h1 class="text-5xl font-bold">Welcome to the <br> ReTro Forum</h1>
-            <p class="py-6">Share your favorite opinion and win and wp forum coffee mug!</p>
-             <div class="flex">
-                <input type="text" placeholder="Type here" class="input input-bordered input-md w-full max-w-xs">
-                <button class="btn btn-primary">Primary</button>
-             </div>
+      <div class="bg-base-200 bg h-[550px] bg-[#12132D]">
+        <div class="flex flex-col lg:flex-row justify-around">
+          <div class="lg:text-left text-white my-auto">
+            <h1 class="text-5xl font-bold">
+              Welcome to the <br />
+              ReTro Forum
+            </h1>
+            <p class="py-6">
+              Share your favorite opinion and win and wp forum coffee mug!
+            </p>
+            <div class="flex">
+              <input
+                type="text"
+                placeholder="Type here"
+                class="input input-bordered input-md w-full max-w-xs"
+              />
+              <button class="btn btn-primary">Primary</button>
+            </div>
           </div>
-          <div class="card shrink-0 w-full max-w-sm shadow-2xl bg-base-100 h-[288px] mt-20">
-            <div class="flex justify-center text-center items-center my-auto gap-20">
-                <div>
-                    <ul>
-                        <li>Registered Users</li>
-                        <li>Forum</li>
-                        <li>Topics</li>
-                        <li>Replies</li>
-                    </ul>
-                </div>
-                <div>
-                    <ul>
-                        <li>01</li>
-                        <li>04</li>
-                        <li>05</li>
-                        <li>03</li>
-                    </ul>
-                </div>
+          <div
+            class="card shrink-0 w-full max-w-sm shadow-2xl bg-base-100 h-[288px] mt-20"
+          >
+            <div
+              class="flex justify-center text-center items-center my-auto gap-20"
+            >
+              <div>
+                <ul>
+                  <li>Registered Users</li>
+                  <li>Forum</li>
+                  <li>Topics</li>
+                  <li>Replies</li>
+                </ul>
+              </div>
+              <div>
+                <ul>
+                  <li>01</li>
+                  <li>04</li>
+                  <li>05</li>
+                  <li>03</li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
       </div>
-
     </header>
-    <main></main>
+    <main>
+      <!-- main section  -->
+      <section class="container mx-auto">
+        <div>
+          <h1 class="text-center text-5xl font-semibold">Let’s Discuss</h1>
+          <p class="w-[ 691px] text-center">
+            Yes, you can run unit tests and view the results directly within the
+            app. <br />
+            The integrated testing features allow for a streamlined .
+          </p>
+        </div>
+        <!-- main div  -->
+        <div class="flex gap-20 mx-auto">
+          <!-- left div  -->
+          <div class="w-[772px] h-[270px] bg-[#F2F2FF] rounded-3xl">
+            <div class="flex justify-around">
+              <div class="mt-10">
+                <img src="images/logo.png" alt="" />
+              </div>
+              <div class="mt-10 space-y-5">
+                <div class="flex gap-4">
+                  <h1># <span>Music</span></h1>
+                  <h2>Author : <span>Awlad Hossain</span></h2>
+                </div>
+                <div><h1>10 Kids Unaware of Their Halloween Costume</h1></div>
+                <div>
+                  <p class="w-[569px]">
+                    It’s one thing to subject yourself to ha Halloween costume
+                    mishap because, hey that’s your prerogative
+                  </p>
+                </div>
+                <hr />
+                <div class="flex space-x-9">
+                  <div class="flex">
+                    <img src="images/tabler-icon-message-2.svg" alt="" />
+                    <p>560</p>
+                  </div>
+
+                  <div class="flex justify-between space-x-9">
+                    <div class="flex">
+                      <img src="images/tabler-icon-eye.svg" alt="" />
+                      <p>1,568</p>
+                    </div>
+
+                    <div class="flex">
+                      <img src="images/tabler-icon-clock-hour-9.svg" alt="" />
+                      <p>5 min</p>
+                    </div>
+                  </div>
+                  <div>
+                    <img src="images/email 1.svg" alt="" />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- right section   -->
+          <!-- main div  -->
+           <div class="w-[374px] h-[465px] rounded-2xl bg-[#F3F3F4]">
+            <div class="flex justify-around">
+              <div>
+               <p>Title</p>
+              </div>
+              <div class="flex">
+                <img src="images/verifay.svg" alt="">
+                <p>Mark as read <span>4</span></p>
+              </div>
+            </div>
+              <div class="w-[326px] h-[82px] bg-white flex items-center mx-auto rounded-2xl justify-around">
+                <div>
+                <h1>10 Kids Unaware of Their <br> Halloween Costume</h1>
+              </div>
+              <div class="flex">
+                <img src="images/tabler-icon-eye.svg" alt="" />
+                <p>1,568</p>
+              </div>
+              </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- regestetion section  -->
+      <section class="container mx-auto text-white">
+        <div class="hero h-[403px] bg-[#12132D]">
+          <div class="hero-content flex-col lg:flex-row-reverse">
+            <img src="images/joinforum.png" class="max-w-sm rounded-lg shadow-2xl" />
+            <div>
+              <h1 class="text-5xl font-bold">Join Our Forum</h1>
+              <p class="py-6 w-[652px]">Share your favorite opinion and win and wp forum coffee mug! Yes, you can run unit tests and view the results directly within the app. </p>
+              <button class="btn btn-primary w-[232px]">Registered Now</button>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
 
     <!-- script add  -->
