latest section complete

--- a/index.html
+++ b/index.html
@@ -199,6 +199,48 @@
           </div>
         </div>
       </section>
+      <!-- latest update section  -->
+      <section class="container mx-auto">
+        <div>
+          <h1 class="text-center text-5xl font-semibold">Latest Posts</h1>
+          <p class="w-[ 691px] text-center">
+            Yes, you can run unit tests and view the results directly within the app <br>
+             The integrated testing features allow for a streamlined
+          </p>
+        </div>
+        <!-- lates show  -->
+        <!-- main div  -->
+        <div>
+          <div class="card card-compact w-96 bg-base-100 shadow-xl">
+            <figure><img src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" /></figure>
+           
+            <div class="card-body">
+              <div class="flex">
+                <img src="images/date.svg" alt="">
+                <p>29 January 2024</p>
+              </div>
+              <h2 class="card-title">What will a mars habitat force that impact in our daily life!!!</h2>
+              <p>Yes, you can run unit tests and view the <br> results directly within the app. </p>
+              <div class="flex">
+                <div>
+                  <img src="images/logo.png" alt="">
+                </div>
+                <div>
+                  <h1>Cameron Williamson</h1>
+                  <h2>unknown</h2>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+
+
+
+
+        </div>
+
+      </section>
     </main>
     <footer></footer>
 
