--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
           </div>
         </div>
       </section>
-
+<!-- hdjhj  -->
       <!-- regestetion section  -->
       <section class="container mx-auto text-white mt-10 mb-10">
         <div class="hero  lg:h-[403px] bg-[#12132D]">
