--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
     <footer class="footer footer-center p-10 bg-base-200 text-base-content rounded">
       <nav class="grid grid-flow gap-4">
         <h1 class="text-5xl font-extrabold">Micro</h1> <br>
-        <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in <br> a piece of classical Latin literature from 45 BC</p>
+        <p>Welcome to visiting our wabsite i hope its very help full all of them</p>
       </nav> 
       <nav>
         <div class="grid grid-flow-col gap-4">
