--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
       </div>
       <!-- banner section  -->
-      <div class="bg-base-200 bg h-[550px] bg-[#12132D]">
+      <div class="bg-base-200 bg h-[490px] bg-[#12132D] bg-contain rounded-[40px] mt-7">
         <div class="flex flex-col lg:flex-row justify-around">
           <div class="lg:text-left text-white my-auto">
             <h1 class="text-5xl font-bold">
@@ -147,7 +147,7 @@
       <section class="container mx-auto sm:20 mt-10">
         <div>
           <h1 class="text-center text-5xl font-semibold">Let’s Discuss</h1>
-          <p class="w-[ 691px] text-center">
+          <p class="w-[ 691px] text-center mt-4">
             Yes, you can run unit tests and view the results directly within the
             app. <br />
             The integrated testing features allow for a streamlined .
@@ -246,7 +246,7 @@
       <section class="container mx-auto">
         <div class="gap-3">
           <h1 class="text-center text-5xl font-semibold">Latest Posts</h1>
-          <p class="w-[ 691px] text-center font-medium">
+          <p class="w-[ 691px] text-center font-medium mt-4 mb-4">
             Yes, you can run unit tests and view the results directly within the app <br>
              The integrated testing features allow for a streamlined
           </p>
